--- a/src/components/auth-components/login-form.css
+++ b/src/components/auth-components/login-form.css
@@ -1,13 +1,25 @@
+.login-form {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+  margin-top: 3%;
+}
 
-.login-form{
+.login-form div {
+  margin-top: 5%;
+}
+
+.welcome {
+  font-family: 'kaushan_scriptregular';
+}
+/* .login-form {
   margin: 0 auto 10px auto;
   width: 50%;
-
 }
-label{
+label {
   font-size: 16px;
 }
-input{
+input {
   width: 100%;
   padding: 8px 20px;
   margin: 10px 0px;
@@ -15,17 +27,18 @@ input{
   border: 1px solid rgb(109, 109, 109);
   border-radius: 4px;
 }
-input[type="text"],[type="password"]{
+input[type='text'],
+[type='password'] {
   font-size: 18px;
 }
 
-.login-btn{
+.login-btn {
   width: 100%;
   margin: 8px 0;
 }
 @media only screen and (max-width: 600px) {
-.login-form{
-  margin: 0;
-  width: 100%;
+  .login-form {
+    margin: 0;
+    width: 100%;
   }
-}
+} */
