--- a/src/components/auth-components/login.css
+++ b/src/components/auth-components/login.css
@@ -30,8 +30,9 @@
 }
 
 .login-btn {
+  width: 40%;
+  margin: auto;
   margin-bottom: 5%;
-  margin-left: 5%;
 }
 .registerLink {
   text-decoration: none;
@@ -41,4 +42,30 @@
 .form-input {
   background-color: black;
   text-align: center;
+}
+
+.form-error {
+  color: red;
+}
+
+@media only screen and (min-width: 768px) {
+  .login-btn {
+    width: 15%;
+    margin: auto;
+  }
+
+  .login-form {
+    display: block;
+    width: 66%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    box-shadow: inset 0 0 0 200px rgba(28, 31, 37, 0.5);
+    text-align: center;
+    min-height: 0vh;
+  }
+
+  .form-itself {
+    padding-bottom: 1%;
+  }
 }
