--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,16 +1,17 @@
 nav {
-  background-color: black;
+  background-color: #ff6a00;
   text-align: right;
-  height: 6%;
+  min-height: 4vh;
 }
 .nav-container button {
-  float: right;
-  height: 6%;
+  float: left;
+  margin-right: 1%;
+  margin-left: 2%;
 }
 
 nav a {
   text-decoration: none;
-  color: green;
+  color: black;
 }
 
 nav h1 {
@@ -67,4 +68,26 @@ nav h1 {
 .pageWrapped img {
   width: 40px;
   color: orange;
+}
+
+@media only screen and (min-width: 768px) {
+  .pageWrapped {
+    display: block;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    text-align: center;
+  }
+
+  .wrappedListPage {
+    display: inline-block;
+    min-width: 100%;
+    background: url('/bg.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+  }
 }
