--- a/src/components/component.css
+++ b/src/components/component.css
@@ -73,11 +73,26 @@ nav h1 {
 @media only screen and (min-width: 768px) {
   .pageWrapped {
     display: block;
-    width: 60%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5%;
     text-align: center;
+    font-size: 20px;
+  }
+
+  .shoppingLists li {
+    padding: 2%;
+    border-radius: 15px;
+    list-style-type: none;
+    margin-bottom: 5%;
+    background-color: #ff6a00;
+    text-align: center;
+  }
+
+  .pageWrapped img {
+    width: 10%;
+    color: orange;
   }
 
   .wrappedListPage {
@@ -88,6 +103,6 @@ nav h1 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
+    height: 100vh;
   }
 }
