added return to login button on registration form

--- a/src/components/auth-components/registration.css
+++ b/src/components/auth-components/registration.css
@@ -24,3 +24,13 @@ input {
 .register-btn {
   margin-top: 3%;
 }
+
+.returnButton {
+  margin: auto;
+  margin-top: 3%;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
