Revert "forms styled, but in an unfortunate way"
This reverts commit 79b008c17f4e695a57374638e6d36ec1a0ecfcf1.

--- a/src/components/auth-components/login.css
+++ b/src/components/auth-components/login.css
@@ -40,51 +40,12 @@
 }
 
 .form-input {
+  background-color: black;
   text-align: center;
 }
 
 .form-error {
   color: red;
-}
-
-#name {
-  color: black;
-}
-
-#store-name {
-  color: black;
-}
-
-#store-address {
-  color: black;
-}
-
-#store-googleId {
-  color: black;
-}
-
-#firstName {
-  color: black;
-}
-
-#lastName {
-  color: black;
-}
-
-#username {
-  color: black;
-}
-
-#password {
-  color: black;
-}
-
-#passwordConfirm {
-  color: black;
-}
-
-#aisleLocation {
-  color: black;
 }
 
 @media only screen and (min-width: 768px) {
