Switch back from edit mode after submitting edit
Unfortunately, this required switching away from using `button`s for Edit and
Cancel and using `a` tags. If they were left as buttons, react would get
confused for some reason and treat the edit button as a form submit button.
It's probably a race condition, so swapping to an anchor link is the correct
way.

Anchor links were styled to look like buttons. The use of the .button class
might have side effects elsewhere in the code base however.

--- a/src/components/ShoppingListItem/ShoppingListItem.css
+++ b/src/components/ShoppingListItem/ShoppingListItem.css
@@ -30,9 +30,8 @@
   align-items: center;
 }
 
-.ShoppingListItem-buttons button {
+.ShoppingListItem-buttons .button {
   flex: 1 1;
-  padding: 0 1em;
 }
 
 .ShoppingListItem--editing input {
