--- a/src/components/CreateShoppingListForm/CreateShoppingListForm.css
+++ b/src/components/CreateShoppingListForm/CreateShoppingListForm.css
@@ -4,3 +4,12 @@
 .CreateShoppingListForm {
   color: black;
 }
+
+.selected-store {
+  border: 1px solid black;
+  border-radius: 20px;
+  text-align: center;
+  max-width: 250px;
+  padding: 5px;
+  margin-top: 10px;
+}
