--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -1,3 +1,16 @@
 .empty-div {
   color: white;
+  text-align: center;
+}
+
+.CreateShoppingList-container {
+  background-color: white;
+}
+
+.add-list-button {
+  opacity: 1;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  background-image: url('/public/plus.png');
 }
