--- a/src/components/component.css
+++ b/src/components/component.css
@@ -130,7 +130,11 @@ a.button:visited {
 }
 
 .editIcon {
-  width: 4vh;
+  width: 3vh;
+  margin-left: 0.75vh;
+}
+.editIconTwo {
+  width: 4.5vh;
   margin-left: 2vh;
 }
 
