added styling to modal

--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -5,6 +5,9 @@
 
 .CreateShoppingList-container {
   background-color: white;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .add-list-button {
