--- a/src/components/CreateShoppingListForm/CreateShoppingListForm.css
+++ b/src/components/CreateShoppingListForm/CreateShoppingListForm.css
@@ -1,15 +1,29 @@
+.CreateShoppingListForm-container {
+  background-color: #aaaaaa25;
+}
+
 .CreateShoppingListForm label {
   display: block;
 }
-.CreateShoppingListForm {
-  color: black;
-}
 
 .selected-store {
-  border: 1px solid black;
+  border: 1px solid #ff6a00;
   border-radius: 20px;
   text-align: center;
-  max-width: 250px;
+  max-width: 100%;
   padding: 5px;
   margin-top: 10px;
+  background-color: #ff6a00;
+}
+
+.search-question {
+  color: white;
+}
+
+.name-label {
+  color: white;
+}
+
+.name-label > input {
+  margin-left: 10px;
 }
