delete list working

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -138,6 +138,11 @@ a.button:visited {
   margin-left: 2vh;
 }
 
+/* :TODO figure out what is overriding */
+.deleteIcon {
+  width: 3vh !important;
+}
+
 @media only screen and (min-width: 768px) {
   .pageWrapped {
     display: block;
