trying to figure out how to embed an image inside a button

--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -15,7 +15,7 @@
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  background-image: url('/public/plus.png');
+  background-image: url('/plus.png');
 }
 
 .close-button {
