Disable logout button when offline
Included is changing the logout button to be a real button rather than a h2
tag.

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -9,11 +9,12 @@ nav a {
   color: black;
 }
 
-nav h2 {
+nav button {
   float: left;
   font-size: 15px;
-  display: inline;
   margin-left: 3%;
+  background-color: inherit;
+  font-weight: bold;
 }
 
 nav h1 {
