--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,8 @@
 :root {
-  --ourOrange: #ff6a00;
-  --ourGreen: #56e722;
+  --ourOrange: #fb6107;
+  --ourGreen: #7cb518;
+  --ourYellow: #f3de2c;
+  --ourGold: #fbb02d;
 }
 
 .orange {
