--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,10 @@ html * {
   box-sizing: border-box;
 }
 
+body {
+  font-family: var(--secondaryFonts);
+}
+
 .orange {
   color: var(--ourOrange);
 }
