--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -9,7 +9,7 @@
 .hero {
   display: grid;
   grid-template: auto/1fr;
-  margin: 1rem auto;
+  margin: 1rem auto 0.25rem;
   padding: 2em;
   background-color: #eeeeee;
 }
