--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,3 +1,7 @@
+.LandingPage {
+  padding: 0 1em;
+}
+
 .LandingPage h1 {
   font-size: 40px;
   text-align: center;
@@ -12,6 +16,7 @@
   margin: 1rem auto 0.25rem;
   padding: 2em;
   background-color: #eeeeee;
+  border-radius: 4px;
 }
 
 .hero .button {
