--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -8,10 +8,11 @@
 .Carousel .dot {
   height: 10px;
   width: 10px;
+  margin: 0 1px;
+  padding: 0;
   border-radius: 50%;
   border: none;
   background-color: #666666;
-  margin: 0 1px;
 }
 
 .Carousel .dot--active {
