--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -154,6 +154,6 @@
 .editItemButton {
   background-color: transparent;
   border: none;
-  padding: none;
-  margin: none;
+  padding: 0;
+  margin: 0;
 }
