--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,3 +30,17 @@ body {
   background-size: cover;
   height: 100vh;
 }
+
+button,
+.button {
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a.button:visited {
+  text-decoration: none;
+  color: inherit;
+}
