list of lists page styled, may also be ugly

--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -1,6 +1,6 @@
 .pageWrapped {
   display: block;
-  width: 90%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5%;
@@ -42,8 +42,31 @@
   text-align: center;
   font-size: 20px;
   color: black;
+  box-shadow: 3px 2px black;
 }
 
 .shoppingList {
-  width: 90%;
+  width: 100%;
+}
+
+.listTitle {
+  font-family: var(--titleFonts);
+  font-size: 1.5em;
+  margin-bottom: 1vh;
+  color: black;
+  font-weight: bold;
+}
+
+.storeDetails {
+  font-family: var(--secondaryFonts);
+  margin-bottom: 1vh;
+}
+
+.distanceFromStore {
+  font-family: var(--secondaryFonts);
+  margin-bottom: 1vh;
+}
+
+.fa-plus-circle {
+  text-shadow: 3px 2px black;
 }
