--- a/src/components/CreateShoppingList/CreateShoppingList.css
+++ b/src/components/CreateShoppingList/CreateShoppingList.css
@@ -7,6 +7,10 @@
 
 .CreateShoppingList-pageTitle {
   color: white;
+  font-family: var(--titleFonts);
+  text-shadow: 2px 1px black;
+  margin-bottom: 1vh;
+  font-size: 1.5em;
 }
 
 .CreateShoppingListForm label {
@@ -14,13 +18,15 @@
 }
 
 .selected-store {
-  border: 1px solid var(--ouorOrange);
-  border-radius: 20px;
-  text-align: center;
-  max-width: 100%;
-  padding: 5px;
-  margin-top: 10px;
+  padding: 2%;
+  border-radius: 15px;
+  list-style-type: none;
+  margin-bottom: 5%;
   background-color: var(--ourOrange);
+  text-align: center;
+  font-size: 20px;
+  color: black;
+  box-shadow: 3px 2px black;
 }
 
 .search-question {
@@ -29,25 +35,67 @@
 
 .name-label {
   color: white;
+  font-family: var(--secondaryFonts);
+  text-shadow: 2px 1px black;
+  margin-bottom: 1vh;
+  font-size: 1em;
 }
 
 .name-label > input {
   margin-left: 10px;
+  box-shadow: 2px 1px black;
 }
 
 .store-result {
-  border: 1px solid var(--ourOrange);
-  border-radius: 20px;
-  text-align: center;
-  width: 95%;
-  padding: 5px;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 2%;
+  border-radius: 15px;
+  list-style-type: none;
+  margin-top: 5%;
   background-color: var(--ourOrange);
+  text-align: center;
+  font-size: 20px;
+  color: black;
+  box-shadow: 3px 2px black;
+}
+.store-result strong {
+  font-family: var(--titleFonts);
+  font-size: 1em;
+  margin-bottom: 1vh;
+  color: black;
+  font-weight: bold;
+}
+
+.selected-result address {
+  font-family: var(--secondaryFonts);
+  margin-bottom: 2vh;
 }
 
 .store-search-results {
   list-style-type: none;
   background: transparent;
+}
+
+.selected-store p {
+  font-family: var(--secondaryFonts);
+  font-size: 1em;
+  margin-bottom: 1vh;
+  color: black;
+  font-weight: bold;
+}
+
+.storeTitle {
+  font-family: var(--titleFonts);
+  font-size: 1.5em;
+  margin-bottom: 1vh;
+  color: black;
+  font-weight: bold;
+}
+
+.selected-store address {
+  font-family: var(--secondaryFonts);
+  margin-bottom: 1vh;
+}
+
+button {
+  font-family: var(--secondaryFonts);
 }
