--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -37,6 +37,7 @@
 
 .hero img {
   max-width: 100%;
+  max-height: 260px;
   margin: 0 auto;
 }
 
@@ -60,6 +61,7 @@
 
   .hero img {
     grid-column-start: 2;
+    max-height: initial;
   }
 
   .hero-titles {
