--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,5 +24,5 @@ html * {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
 }
