--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,7 @@
   --ourGreen: #7cb518;
   --ourYellow: #f3de2c;
   --ourGold: #fbb02d;
+  --ourWarningColor: #db504a;
   --titleFonts: 'Righteous', cursive;
   --secondaryFonts: 'Lato', sans-serif;
   --fadedBack: rgba(255, 255, 255, 0.1);
@@ -38,6 +39,16 @@ button,
   border-radius: 4px;
   text-decoration: none;
   cursor: pointer;
+  font-size: 1em;
+  font-family: var(--secondaryFonts);
+}
+
+.button--green {
+  background-color: var(--ourGreen);
+}
+
+.button--orange {
+  background-color: var(--ourOrange);
 }
 
 a.button:visited {
@@ -49,7 +60,7 @@ input {
   padding: 0.5em 1em;
   border: none;
   border-radius: 4px;
-  background-color: #eeeeee;
+  background-color: white;
   font-size: 1rem;
   font-family: var(--secondaryFonts);
 }
