Minor change to the button color classes
Hopefully this will make it easier if we change palettes in the future

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,11 +43,11 @@ button,
   font-family: var(--secondaryFonts);
 }
 
-.button--green {
+.button--submit {
   background-color: var(--ourGreen);
 }
 
-.button--orange {
+.button--primary {
   background-color: var(--ourOrange);
 }
 
