--- a/src/css/index.css
+++ b/src/css/index.css
@@ -58,7 +58,7 @@ a.button:visited {
 
 input {
   padding: 0.5em 1em;
-  border: none;
+  border: 1px solid #aaaaaa;
   border-radius: 4px;
   background-color: white;
   font-size: 1rem;
