Turn lightgrey card color into a variable

--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -20,5 +20,5 @@
   padding: 1em;
   max-width: 600px;
   border-radius: 4px;
-  background-color: #eeeeee;
+  background-color: var(--cardBgColor);
 }
