changed add list button

--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -73,3 +73,11 @@
 .fa-trash-alt {
   font-size: 1rem;
 }
+
+.fa-plus-circle {
+  color: var(--ourGreen);
+  text-shadow: 2px 1px black;
+  position: absolute;
+  left: 13rem;
+  top: 28rem;
+}
