fixed add buttopn rather than absolute

--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -77,7 +77,7 @@
 .fa-plus-circle {
   color: var(--ourGreen);
   text-shadow: 2px 1px black;
-  position: absolute;
+  position: fixed;
   left: 13rem;
   top: 28rem;
 }
