--- a/src/components/CreateShoppingList/CreateShoppingList.css
+++ b/src/components/CreateShoppingList/CreateShoppingList.css
@@ -2,14 +2,42 @@
   background-color: transparent;
   max-width: 80%;
   margin: auto;
-  text-align: left;
+  text-align: center;
+  clear: both;
 }
 
 .CreateShoppingList-pageTitle {
   color: black;
+  margin: 20px;
+  font-weight: 600;
 }
 
 .CreateShoppingListForm {
+  text-align: center;
+  clear: both;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+
+.CreateShoppingListForm button {
+  margin: 0px 5px;
+}
+
+.name-label {
+  margin-right: 25px;
+}
+
+input#name {
+  margin: 5px 0px;
+}
+
+.error-prompt {
+  color: red;
+}
+
+.store-search {
   text-align: center;
 }
 
@@ -20,12 +48,23 @@
   max-width: 100%;
   padding: 5px;
   margin-top: 10px;
+  margin-bottom: 5px;
   background-color: var(--ourOrange);
+}
+
+.select-new-store {
+  margin: 5px 0px;
+}
+
+.create-list {
+  margin: 5px 0px;
 }
 
 .search-question {
   color: black;
   padding: 5px 0px;
+  margin-top: 5px;
+  font-weight: 600;
 }
 
 .store-result {
@@ -33,33 +72,33 @@
   border-radius: 20px;
   text-align: center;
   width: 100%;
-  padding: 5px;
+  padding: 10px;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--ourOrange);
 }
 
+.store-result-details {
+  padding: 0px;
+}
+
 .store-search-results {
   list-style-type: none;
   background: transparent;
   margin-bottom: 20px;
-}
-
-.CreateShoppingListForm label {
-  display: block;
-}
-
-.error-prompt {
-  color: red;
+  text-align: center;
 }
 
 .store-search-form {
   text-align: center;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .store-name-label {
-  margin-right: 12px;
+  margin-right: 12.5px;
 }
 
 .store-location-label {
