--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -10,6 +10,13 @@
 }
 
 .Input .label {
-  flex-basis: 4.5em;
+  flex-basis: 5em;
   flex-shrink: 0;
+  flex-grow: 1;
+  max-width: 5.5em;
+  text-align: right;
+}
+
+.Input input {
+  flex: 0 0 200px;
 }
