--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -72,7 +72,8 @@
 }
 
 .close-button {
-  color: var(--ourOrange);
-  text-shadow: 3px 2px black;
+  color: var(--ourGreen);
+  text-shadow: 2px 1px black;
   float: right;
+  margin: 5px;
 }
