changed some buttons and expanded inputs

--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -74,6 +74,7 @@
 .close-button {
   color: var(--ourGreen);
   text-shadow: 2px 1px black;
-  float: right;
+  position: absolute;
+  right: 0;
   margin: 5px;
 }
