--- a/src/components/CreateShoppingList/CreateShoppingList.css
+++ b/src/components/CreateShoppingList/CreateShoppingList.css
@@ -3,35 +3,36 @@
   max-width: 85%;
   margin: auto;
   text-align: center;
+}
+
+.CreateShoppingList {
   clear: both;
 }
 
 .CreateShoppingList-pageTitle {
   color: black;
-  padding: 20px;
+  padding: 10px;
   font-weight: 600;
   font-size: 18px;
+  text-align: center;
 }
 
 .CreateShoppingListForm {
   text-align: center;
   clear: both;
-  max-width: 300px;
+  max-width: 275px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
 }
 
 .CreateShoppingListForm button {
-  margin: 0px 5px;
-}
-
-.name-label {
-  margin-right: 25px;
+  margin: 10px 0px 0px 0px;
 }
 
 input#name {
   margin: 5px 0px;
+  width: 100%;
 }
 
 .error-prompt {
@@ -93,26 +94,20 @@ input#name {
 
 .store-search-form {
   text-align: center;
-  max-width: 300px;
+  max-width: 275px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.store-name-label {
-  margin-right: 12.5px;
-}
-
-.store-location-label {
-  margin-right: 2px;
-}
-
 .store-search-form input {
   margin: 5px 0px;
+  width: 100%;
 }
 
 .search-button {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
 }
 
 .location-blue {
