--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,30 +1,68 @@
 .Items .shoppingList {
   display: grid;
-  grid-template: auto / 0.5fr 5fr 0.5fr 1.5fr 0.5fr 1.6fr;
+  /*                    1  2   3  4   5  6  7  8  9  10*/
+  grid-template: auto / 5% 5% 30% 5% 25% 5% 5% 5% 5% 10%;
   padding: 1em;
   max-width: 800px;
   margin: 0 auto;
 }
+.icon-btn {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: none;
+  font-size: 1.2em;
+}
+.edit-btn,
+.delete-btn {
+  color: black;
+  outline: none;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0);
+  text-align: start;
+  height: 75%;
 
-.fa-square {
+  /* margin: 0 5px 5px 0; */
+}
+.edit-btn {
+  grid-column: 7;
+  padding-top: 6px;
+  padding-left: 0;
+}
+.delete-btn {
+  grid-column: 9;
+}
+
+.check-box {
   margin: auto;
   font-weight: 100;
   grid-column: 1;
 }
-.fa-check-square {
-  margin: auto;
-  font-weight: 100;
-  grid-column: 1;
-}
+
 .Items .item {
-  grid-column: 2;
-  border: 1px solid black;
+  grid-column: 3;
 }
 .Items .aisle {
-  grid-column: 4;
-  border: 1px solid black;
+  grid-column: 5;
+  text-align: center;
 }
-
+.aisle-heading {
+  margin: auto;
+}
+.save-edit,
+.cancel-edit {
+  outline: none;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0);
+  text-align: start;
+  height: 75%;
+}
+.save-edit {
+  grid-column: 7;
+}
+.cancel-edit {
+  grid-column: 9;
+}
 .Items .list-heading {
   font-family: var(--titleFonts);
   text-align: left;
@@ -44,6 +82,7 @@
   cursor: pointer;
   text-align: left;
   padding: 0.5em 0;
+  margin-bottom: 5px;
   background-color: var(--fadedBack);
   font-family: var(--secondaryFonts);
 }
@@ -52,7 +91,6 @@
   display: inline-flex;
   flex-flow: row nowrap;
   align-items: center;
-  grid-column: 5;
 }
 
 .ShoppingListItem-buttons a {
@@ -66,7 +104,9 @@
 .ShoppingListItem--editing {
   border: none;
   padding: 0 auto;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.65);
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
 .ShoppingListItem--editing input {
@@ -94,10 +134,17 @@
 }
 
 .editIcon {
+  font-weight: 100;
   margin-left: 3px;
   text-decoration: none;
 }
-
+.edit-item {
+  margin: 0 0 8px 10px;
+  font-size: 1.2em;
+}
+.fa-times-circle {
+  font-weight: 100;
+}
 .addItemInputs {
   text-align: center;
   margin-top: 2px;
@@ -121,7 +168,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  text-align: left;
+  /* text-align: left; */
   padding: 0.5em 0;
   background-color: var(--fadedBack);
 }
@@ -129,10 +176,9 @@
 .editingAisle {
   font-size: 1rem;
   border: none;
-
   outline: none;
   cursor: pointer;
-  text-align: left;
+  text-align: center;
   padding: 0.5em 0;
   background-color: var(--fadedBack);
 }
