--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 :root {
-  --ourOrange: #fb6107;
-  --ourGreen: #7cb518;
+  /* --ourOrange: #fb6107; */
+  /* --ourGreen: #7cb518; */
   --ourYellow: #f3de2c;
   --ourGold: #fbb02d;
   --ourWarningColor: #db504a;
@@ -8,6 +8,11 @@
   --secondaryFonts: 'Lato', sans-serif;
   --fadedBack: rgba(255, 255, 255, 0.1);
   --cardBgColor: #eeeeee;
+  /* start new color palette */
+  --ourGreen: #ec5d61;
+  --ourOrange: #5dece8;
+  --ourSecondary: #3c5334;
+  --ourSecondaryComplimentary: #4b3453;
 }
 
 html * {
@@ -25,7 +30,7 @@ body {
 #root {
   display: inline-block;
   min-width: 100%;
-  background: url('/bg.jpg') no-repeat center center fixed;
+  background: url('/bgLightFlip2.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
