--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 :root {
-  --ourOrange: #fb6107;
-  --ourGreen: #7cb518;
+  /* --ourOrange: #fb6107; */
+  /* --ourGreen: #7cb518; */
   --ourYellow: #f3de2c;
   --ourGold: #fbb02d;
   --ourWarningColor: #db504a;
@@ -9,7 +9,8 @@
   --fadedBack: rgba(255, 255, 255, 0.1);
   --cardBgColor: #eeeeee;
   /* start new color palette */
-  --ourPrimary: #ec5d61;
+  --ourPrimary: #ec5d6273;
+  --ourPrimaryTranslucent: #ec5d62bb;
   --ourPrimaryCompliment: #5dece8;
   --ourSecondary: #3c5334;
   --ourSecondaryComplimentary: #4b3453;
