--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: var(--ourOrange);
+  background-color: var(--ourPrimary);
   font-family: var(--titleFonts);
 }
 .rightNav {
