--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 :root {
-  /* --ourOrange: #fb6107; */
-  /* --ourGreen: #7cb518; */
+  --ourOrange: #fb6107;
+  --ourGreen: #7cb518;
   --ourYellow: #f3de2c;
   --ourGold: #fbb02d;
   --ourWarningColor: #db504a;
@@ -10,7 +10,7 @@
   --cardBgColor: #eeeeee;
   /* start new color palette */
   --ourPrimary: #ec5d62;
-  --ourOrange: #ec5d62bb;
+  --ourPrimaryTranslucent: #ec5d62bb;
   --ourPrimaryCompliment: #5dece8;
   --ourSecondary: #3c5334;
   --ourSecondaryComplimentary: #4b3453;
