added some space between lines of text

--- a/src/components/ShoppingList/ShoppingList.css
+++ b/src/components/ShoppingList/ShoppingList.css
@@ -1,3 +1,13 @@
+.list-title {
+  padding: 0.25em;
+}
+
+.distanceFromStore {
+  font-family: var(--secondaryFonts);
+  font-size: 1rem;
+  padding: 0.25em;
+}
+
 .list-delete-btn button {
   font-size: 12px;
   margin: 5px;
@@ -5,4 +15,5 @@
 
 .delete-icon {
   font-size: 1.25rem;
+  margin-top: 5px;
 }
