--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,7 +1,7 @@
 .Items .shoppingList {
   display: grid;
   /*                    1  2   3  4   5  6  7  8  9  10*/
-  grid-template: auto / 5% 5% 30% 5% 25% 5% 5% 5% 5% 10%;
+  grid-template: auto / 5% 5% 35% 5% 30% 5% 5% 5% 5%;
   padding: 1em;
   max-width: 800px;
   margin: 0 auto;
@@ -15,6 +15,7 @@
 }
 .edit-btn,
 .delete-btn {
+  padding: 0;
   color: black;
   outline: none;
   cursor: pointer;
