fonts added for now

--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -119,7 +119,8 @@
 }
 
 .listTitle h1 {
-  font-family: var(--titleFonts);
+  font-family: var(--headerFont);
+  text-transform: capitalize;
   font-size: 2em;
   margin-bottom: 1vh;
 }
