--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -6,10 +6,12 @@
 
 .LoginForm legend {
   font-size: 1.5rem;
+  font-family: var(--headerFont);
 }
 
 .LoginForm .Input {
   margin-top: 1em;
+  font-family: var(--textFont);
 }
 
 .LoginForm button,
