--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -4,7 +4,7 @@
   padding: 0;
   overflow: hidden;
   background-color: var(--ourPrimary);
-  font-family: var(--titleFonts);
+  font-family: var(--headerFont);
 }
 .rightNav {
   float: right;
@@ -31,6 +31,7 @@
   padding: 14px 16px;
   text-decoration: none;
   height: 45px;
+  font-family: var(--headerFont);
   font-size: 1.2em;
   color: black;
 }
