--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -26,12 +26,12 @@
 }
 
 .hero h2 {
-  font-family: 'Righteous', 'serif';
+  font-family: var(--headerFont);
   font-size: 1.5rem;
 }
 
 .hero p {
-  font-family: 'Lato', 'sans-serif';
+  font-family: var(--secondaryFont);
   margin: 1em 0;
 }
 
