--- a/src/components/ShoppingList/ShoppingList.css
+++ b/src/components/ShoppingList/ShoppingList.css
@@ -1,7 +1,13 @@
 .list-title {
   padding: 0.25em;
+  font-size: 1.5rem;
+  font-family: var(--headerFont);
 }
 
+.list-store {
+  font-family: var(--secondaryFonts);
+  font-size: 1rem;
+}
 .distanceFromStore {
   font-family: var(--secondaryFonts);
   font-size: 1rem;
